samples/_failures_safe/1761596819_40ddba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d61c1fa0.c: In function ‘display_compression_info’:
./samples/SAFE/__tmp_d61c1fa0.c:143:5: error: expected expression at end of input
  143 |     if (ctx->header.original_size >
      |     ^~
./samples/SAFE/__tmp_d61c1fa0.c:143:5: error: expected declaration or statement at end of input
